Fix overflow issue in Firefox
Closes #27

Thanks Michael_B http://stackoverflow.com/a/32911466/1832306

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,6 +242,7 @@ header nav li:hover {
 #wrapper {
   flex: 2;
   display: flex;
+  overflow-y: hidden;
 }
 
 #friends {
